INGRESS/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
   name: my-aws-ingress-class
   annotations:
      ingressclass.kubernetes.io/is-default-class: "true"

spec:
   controller: ingress.k8s.aws/alb
   
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-service
  labels:
    app: nginx-app
  annotations:
    # Ingress Core Settings
    alb.ingress.kubernetes.io/load-balancer-name: ingress-loadbalancer
   # kubernetes.io/ingress.class: "alb"
    #alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-west-2:080266302756:certificate/b438ee4b-3423-4a8a-91f7-2cbf4e5c55d2'
    # SSL 
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    external-dns.alpha.kubernetes.io/hostname: eks.abdelalitraining.com
spec:
  ingressClassName: my-aws-ingress-class
  tls:
  - hosts:
    - "*.abdelalitraining.com"
  rules:
    #- http:
    #   paths:
    #   - path: /
    #     pathType: Prefix
    #     backend:
    #       service:
    #        name: kibana
    #        port:
    #          number: 3000
                
    - host: grafana.abdelalitraining.com
      http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
            name: grafana
            port:
              number: 3000
    - host: kibana.abdelalitraining.com 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kibana
              port:
                number: 5601
